# aisep

./: .gitignore  .importlinter  AGENTS.md  AISEP-ClaudeCode有头先行实施方案-v2.md  AISEP-ClaudeCode有头先行实施方案.md  AISEP-ClaudeCode架构决策文档.md  CLAUDE.md  HARDENING.md  LICENSE  Makefile  README.md  SECURITY.md  constitution.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.json
.claude/agents/: analyst.md
.claude/hooks/: session-bootstrap.sh
.githooks/: pre-commit
.github/: CODEOWNERS
.github/workflows/: ci.yml  gates.yml
dashboard/: index.html
deploy/openhands/: README.md  docker-compose.yml
docs/: DEPLOY.md  GETTING-STARTED.md  README.md  USER-GUIDE.html  USER-GUIDE.md  bpmn-workbench.html  sdlc-launcher.html
docs/console/: aisep-console.html
docs/decisions/: AISEP-ClaudeCode架构决策文档.md
docs/diagrams/: AISEP-ClaudeCode功能版架构图.html
docs/flows/: sdlc-pipeline.bpmn  sdlc-pipeline.js  stage-requirements.bpmn
docs/plans/: AISEP-ClaudeCode有头先行实施方案-v2.md  AISEP-ClaudeCode有头先行实施方案.md
docs/research/: AISEP6-6-健康度报告.md  AISEP移植ClaudeCode作为企业工程harness-可行性与实施设计-完整报告.md  AISEP移植ClaudeCode作为企业工程harness-完整实施方案.md  (+1 more)
eval/: cost-log.md  dataset.jsonl
scripts/: setup-github-protection.sh  verify_vendor_provenance.py
specs/: README.md
tests/: test_bpmn_status.py  test_bpmn_workbench.py  test_context.py  test_demo_csv.py  test_eval_and_runtime.py  test_governance.py  test_harness.py  test_judge_vendor_exempt.py  test_launcher_data.py  test_launcher_page.py  test_orchestration.py  test_project_dashboard.py  test_quality.py  test_req_5step.py
(+142 files in other folders)
