[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aiforge"
version = "0.1.0"
description = "AI 工程化软件开发系统：规格驱动 + 多 Agent 编排 + 上下文工程 + 质量门禁 + 治理审计"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = ["ruff>=0.5.0"]

[project.scripts]
aiforge = "aiforge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]
